add api read table form e fix
