# app/Http/Controllers/SeleniumController.php
@@ -6,6 +6,7 @@ use App\Models\InformationRecord;
 use App\Repositories\InformationRecordRepository;
 use App\Services\ServiceSelenium;
 use Illuminate\Http\Response;
+use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Log;
 
 class SeleniumController extends Controller
@@ -47,11 +48,40 @@ class SeleniumController extends Controller
      *
      * @return \Illuminate\Http\JsonResponse
      */
-    public function acessPageSave()
+    public function accessPageSave()
     {
         $page = $this->serviceSelenium->accessPage();
         $this->informationRecordRepository->store($page);
 
         return response()->json($page, Response::HTTP_OK);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/read-form",
+     *     tags={"Desafio"},
+     *     summary="Fill the form",
+     *     description="Fill in the link form",
+     *     security={{"bearerAuth":{}}},
+     *     @OA\RequestBody(
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(property="username", type="string", example="Renato Lucena"),
+     *              @OA\Property(property="password", type="string", example="secret"),
+     *              @OA\Property(property="comments", type="string", example="Sou novo dev php senior da Bionexo")
+     *          ),
+     *      ),
+     *      @OA\Response(response=200, description="Success Fill in the link form" ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="Resource Not Found")
+     * )
+     */
+    public function sendDataToForm(Request $request)
+    {
+        $params = $request->all();
+        if ($params) {
+            return $this->serviceSelenium->sendFormParamns($params);
+        }
+
     }
 }
